----- StarLib Changelog -----

9/29/2012, Adam
- Deleted StarLSim's package "simapps"
- Added sleep() method to LogicThread class which delivers pending messages before sleeping. LogicThread now implements MessageListener by default, and subclasses of LogicThread may receive messages by registering themselves as message listeners and overriding the receive() method.
- HOW DID NO ONE NOTICE THAT "messageReceied" WAS SPELLED WRONG???

9/23/2012, Adam
- Made SimSettings immutable to prevent any simulated code from ever changing simulation parameters. A new SimSettings must be built for each execution with different parameters.
- Added variables to SimSettings to control drawing waypoints

9/19/2012, Stan
- Created a SettingsWriter class to contain the Gson code so that I can run the simulator without having to download the library

9/19/2012, Stan
- Modified Deere Fardin App
- Synchronized Point Input in Simulator with drawing (and therefore with logic thread)

9/19/2012, Adam
- Simulator now saves settings for each simulation in trace directory in JSON
- Added timestamp variable to TraceWriter methods
- Removed StarLSim's "simapps" package from the build path
- Simulated apps now start their own trace files, no need to call trace.traceStart()
- Removed the broken distance predicate, added ability to include custom position observers for a simulation.

9/8/2012, Adam
- Cleaned up pieces of StarLib, including Android specific code
- Removed DeadReckoner because it's useless with the iRobot Create chassis
- Changed robot event listener interface to be more extensible for future event types
- Added message reception callback

9/5/2012, Stan
- Removed awt requirements from StarLib and LogicThread classes
- Separated out FardinDeere app and StanTestApp into own project following Adam's changes

9/4/2012, Adam
- Changed SimSettings to use the builder pattern. A separate "settings initializer" is no longer required.