@@ -33,7 +33,7 @@ public class DecoupledSimComChannel implements SimComChannel {
 	private Random rand;
 
 	// for message blocking
-	private Map<String, String> ipToNameMap = new TreeMap<String, String>();
+	private Map<String, String> ipToNameMap = new HashMap<String, String>();
 	private Set<String> blockedRobot;
 
 	// Drop rate is per 100 messages
@@ -46,13 +46,9 @@ public class DecoupledSimComChannel implements SimComChannel {
 		receivers = new HashMap<String, SimSmartComThread>();
 		rand = new Random(seed);
 
-		// TODO (Adam) Why are we just reversing the map?
-		for(Entry<String, String> participant : nameToIpMap.entrySet()) {
-			String name = participant.getKey();
-			String ip = participant.getValue();
-
-			ipToNameMap.put(ip, name);
-		}
+		// We require a map from IP -> Name, are given a map from Name -> IP
+		for(Entry<String, String> participant : nameToIpMap.entrySet())
+			ipToNameMap.put(participant.getValue(), participant.getKey());
 	}
 
 	public void registerMsgReceiver(SimSmartComThread hct, String IP) {
@@ -99,7 +95,6 @@ public class DecoupledSimComChannel implements SimComChannel {
 	}
 
 	private boolean shouldForceDrop(String fromIp, String toIp) {
-		
 		String from = ipToNameMap.get(fromIp);
 		String to = ipToNameMap.get(toIp);
 		return blockedRobot.contains(from) || blockedRobot.contains(to);
@@ -110,8 +105,7 @@ public class DecoupledSimComChannel implements SimComChannel {
 		Set<DeliveryEvent> toRemove = new HashSet<DeliveryEvent>();
 		for(DeliveryEvent de : msgs) {
 			de.delay -= advance;
-			// If this message's delay has expired, deliver it
-			// and flag it for removal
+			// If this message's delay has expired, deliver it and flag it for removal
 			if(de.delay == 0) {
 				de.deliver();
 				toRemove.add(de);
