@@ -1,5 +1,12 @@
 ----- StarLib Changelog -----
 
+10/24/2012, Adam
+- Added simulation timeout functionality. If the TIMEOUT value is positive the simulation will abort when the duration reaches TIMEOUT seconds.
+- Lowered MAX_FPS default value to 30
+- Added call to get simulation duration (length of simulated time)
+- Protected all public variables in the SimulationEngine class
+- Optimized a couple of pieces of DecoupledSimComChannel
+
 9/29/2012, Adam
 - Deleted StarLSim's package "simapps"
 - Added sleep() method to LogicThread class which delivers pending messages before sleeping. LogicThread now implements MessageListener by default, and subclasses of LogicThread may receive messages by registering themselves as message listeners and overriding the receive() method.
